# langchain_quick_start

./: .gitignore  README.md  main.py  pyproject.toml
app/: README.md  main.py  pyproject.toml  service.py
app/domain/: interfaces.py  models.py
app/infrastructure/git/: github.py
app/llm_checker/: langchain_checker.py  prompt_templates.py
app/llm_tools/: agent_pr_review.py  github_tools.py
app/service/: service.py
app/service/feedback/: github_feedback.py
chains/: chatbot.py  memory.py  translator.py
common/config/: settings.py
common/embeddiings/: huggingface_embedding.py
common/llm/: chat_parrot_link.py  deepseek.py
common/retrievers/: similarity_retriever.py
common/vector_stores/: in_memory_vector_store.py
config/: pyproject.toml  settings.py
config/tests/: test_settings.py
core/: pyproject.toml
core/src/core/classification/: __init__.py  person.py
core/src/core/llm/: deepseek.py
core/src/core/retrievers/: similarity_retriever.py
core/src/core/vector_stores/: in_memory_vector_store.py
core/tests/: test_chat_model_caching.py  test_classification.py  test_custom_chat_model.py  test_deepseek.py  test_extraction.py  test_llm_chain.py  test_logprobs.py  test_retrievers.py  test_streaming.py  test_structured_output.py  test_structured_output_advanced.py  test_tool_calling.py
services/: chatbot.py  memory.py  pyproject.toml
services/src/services/: chatbot.py  memory.py
test/: test_agent_pr_review.py  test_chat_bot.py  test_chat_model_caching.py  test_classification.py  test_custom_chat_model.py  test_extraction.py  test_llm_chain.py  test_logprobs.py  test_retrievers.py  test_streaming.py  test_structured_output.py  test_structured_output_advanced.py  test_tool_calling.py
tests/: test_memory.py
