[project]
name = "langchain_quick_start"
version = "0.1.0"
description = "LangChain 多模块学习项目"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "uvicorn>=0.29.0",
]

[tool.uv.workspace]
members = [
    "core",
    "services",
    "config"
, "app"]
