[project]
name = "langchain-quick-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.59",
    "langchain-deepseek>=0.1.3",
    "langchain-huggingface>=0.2.0",
    "langgraph>=0.4.3",
    "pypdf>=5.5.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
