[project]
name = "core"
version = "0.1.0"
description = "核心能力模块，封装 LLM、Prompt、通用工具等。"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.25",
    "langchain-core>=0.3.58",
    "langchain-deepseek>=0.1.3",
    "langgraph>=0.4.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
] 